tests/ui/basic.stderr
error: enum cannot contain fields
  --> tests/ui/basic.rs:23:5
   |
23 |     Green(u32),
   |     ^^^^^

error: enum cannot contain fields
  --> tests/ui/basic.rs:29:5
   |
29 |     Bin { field: u32 },
   |     ^^^

error: unsupported repr `u128`
  --> tests/ui/basic.rs:35:8
   |
35 | #[repr(u128)]
   |        ^^^^

error: unsupported repr `i128`
  --> tests/ui/basic.rs:43:8
   |
43 | #[repr(i128)]
   |        ^^^^

error: enum cannot be generic
  --> tests/ui/basic.rs:51:7
   |
51 | enum C<T> {
   |       ^

error: Unknown option `foo`
  --> tests/ui/basic.rs:57:13
   |
57 | #[open_enum(foo)]
   |             ^^^

error: `non_exhaustive` cannot be applied to an open enum; it is already non-exhaustive
  --> tests/ui/basic.rs:61:3
   |
61 | #[non_exhaustive]
   |   ^^^^^^^^^^^^^^
